<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black"
    android:id="@+id/llmain"
    tools:context=".MainActivity">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/txtlogo"
       android:textColor="@color/white"
       android:padding="10dp"
       android:autofillHints="password"
       android:layout_marginBottom="100dp"
          android:textSize="35sp"
       android:textStyle="bold"
       android:paddingStart="18dp"
      />




   <EditText
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:ems="12"
       android:padding="20dp"
       android:autofillHints="password"
       android:hint="@string/weight_input"
       android:id="@+id/edtweight"
       android:inputType="number"
       android:textColor="@color/white"
       android:textColorHint="@color/white"
       />

   <EditText
       android:id="@+id/edtheightFT"
       android:layout_width="266dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:autofillHints="password"
       android:ems="12"
       android:hint="@string/height_inputFT"
       android:inputType="number"
       android:padding="20dp"
       android:textColor="@color/white"
       android:textColorHint="@color/white"

       />

   <EditText
       android:id="@+id/edtheightIN"
       android:layout_width="284dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:autofillHints="password"
       android:ems="12"
       android:hint="@string/height_inputIN"
       android:inputType="number"
       android:padding="20dp"
       android:textColor="@color/white"
       android:textColorHint="@color/white" />

   <androidx.appcompat.widget.AppCompatButton
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:text="@string/button1"
      android:layout_marginTop="20dp"
       android:id="@+id/btncal"
      android:background="@color/purple_700"
      android:textColor="@color/white"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:id="@+id/txtRESULT"
       android:text="@string/txtshow"
       android:textSize="25sp"
       android:textStyle="italic"
      android:textColor="@color/white"/>


</LinearLayout>